--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -17,7 +17,9 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+<form method="POST" action="{% url 'add_cart' single_product.id %}">
+  {% csrf_token %}
+  <article class="content-body">
 
 <h2 class="title">{{single_product}}</h2>
 
@@ -32,48 +34,38 @@
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div> 
+			<select name="color" class="form-control" required>
+        <option value="" selected disabled>Choose Color</option>
+       {% for i in single_product.variation_set.colors%}
+        <option value="{{i.variation_value | lower }}">{{i.variation_value | capfirst}}</option>
+       {% endfor%}
+      </select>
 		</div>
 	</div> <!-- row.// -->
 	<div class="row">
-		<div class="item-option-select">
+		<div class="item-option-select" required>
 			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div> 
+			<select name="size" class="form-control">
+        <option value="" selected disabled>Choose Size</option>
+        {% for i in single_product.variation_set.sizes %}
+          <option value="{{i.variation_value | lower }}">{{i.variation_value | capfirst}}</option>
+        {% endfor %}
+      </select>
 		</div>
-	</div> <!-- row.// -->
+	</div> 
 	<hr>
   {% if single_product.stock <= 0 %}
     <h5 class="text-danger">OUT OF STOCK</h5>
   {% else %}
-	  <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+   
+	    <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+    
+ 
+      <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
+    
   {% endif %}
-</article> <!-- product-info-aside .// -->
+  </article> <!-- product-info-aside .// -->
+</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
