--- a/templates/base.html
+++ b/templates/base.html
@@ -27,14 +27,16 @@
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js'%}" type="text/javascript"></script>
-
+<script src="/static/js/script.js" type="text/javascript"></script>
 <script type="text/javascript">
 /// some script
 
 // jquery ready start
 $(document).ready(function() {
 	// jQuery code
-
+  setTimeout(function(){
+    $("#message").fadeOut('slow')
+  },4000)
 }); 
 // jquery end
 </script>
